--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/HaitaoWang555/qqMusic#readme",
   "dependencies": {
+    "cors": "^2.8.4",
     "express": "^4.16.2",
     "request": "^2.83.0",
     "request-promise": "^4.2.2"
