--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "qq音乐项目",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dist": "node-sass --output-style compressed scss/app.scss > dist/app.css && webpack -p"
   },
   "repository": {
     "type": "git",
